temp fix iPhoneX modal portrait  img overflow (orient: landscape) - MacBook

--- a/src/styles/modal-landscape-small.css
+++ b/src/styles/modal-landscape-small.css
@@ -289,3 +289,45 @@
     
 }
 
+/* iPhoneX ADJUSTMENTS  FOR OVERFLOWING IMAGES IN LANDSCAPE MODAL */
+@media only screen and (orientation: landscape) and (min-width: 812px) and (max-width: 1399px) and (max-height: 375px) {
+
+    .modal-img-container {
+        /* position: relative; */
+        /* width: 38%; */
+        overflow: hidden;
+        max-height: 350px;
+        margin-bottom: 1%;
+        /* border: 2px solid red; */
+    }
+
+    .thumbnail-container {
+        /* width: 38%; */
+        width: 75%;
+        overflow: auto;
+        /* border: 2px solid red; */
+    }
+
+    /*  HIDE OVERFLOW OF THUMBNAIL IMG CONTAINERS */
+    .thumbnail-container .thumbnail-div {
+        /* width: 32%; */
+        width: 24.5%;
+        /* !!! PERCENT MAX HEIGHT WONT APPLY !!! */
+        /* max-height: 33%; */
+
+        /*  SET MAX HEIGHT AND HIDE OVERFLOW OF THUMBNAIL IMG CONTAINERS */
+        /* height: 90px; */
+        /* max-height: 115px; */
+        overflow: hidden;
+
+        /* border: 1px solid orange; */
+    }
+
+    img.thumbnail-image {
+        width: 100%;
+        /* margin: 2px; */
+       
+        opacity: 0.6;
+        /* border: 3px solid rgb(34, 219, 157); */
+    }
+}
